# so_creat

./: CMakeLists.txt  ConstW.h  DetectBlind.cpp  ImageInsert.cpp  Watermark.cpp  Watermark.h  attackout  main.cpp  noneout  resout
QR/: qrReader.cpp  qrReader.h
RS/: berlekamp.cpp  ecc.h  galois.cpp  rs.cpp
build-test/: CMakeCache.txt  Makefile  Watermark  cmake_install.cmake
build_ins/include/: Watermark.h
